--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,17 @@ layout: default
 ---
 <div class="post">
 
+  <p>Other posts</p>
+  <ul class="posts">
+  {% for post in site.posts limit:20 %}
+     <li>
+       <span>{{ post.date | date_to_string }}</span> &raquo;
+       <a href="{{ BASE_PATH }}{{ post.url }}">
+       {{ post.title }}</a>
+     </li>
+  {% endfor %}
+  </ul>
+
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
